# rust_ev_verifier_lib

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY  config.toml
.github/workflows/: rust-clippy.yml
application/: Cargo.toml
application/src/: lib.rs  runner.rs
console/: Cargo.toml
console/src/: command.rs  main.rs
crate_application_lib/: .gitignore  Cargo.toml  README.md
crate_application_lib/src/: extract.rs  lib.rs  run_information.rs  runner.rs
crate_application_lib/src/report/: mod.rs  report_config.rs  report_output.rs  report_output_data.rs
crate_application_lib/src/report/report_output/: mod.rs  options.rs
crate_application_lib/src/report/report_output_file/: mod.rs  options.rs
crate_application_lib/test_data/: test_env_full_ok
crypto_primitives/: Cargo.toml
crypto_primitives/src/: byte_array.rs  direct_trust.rs  elgamal.rs  hashing.rs  num_bigint.rs  number_theory.rs  signature.rs  zero_knowledge_proof.rs
crypto_primitives/src/openssl_wrapper/: certificate.rs  hash.rs  signature.rs
datasets/context/: configuration-anonymized.xml  controlComponentPublicKeysPayload.1.json  controlComponentPublicKeysPayload.2.json  controlComponentPublicKeysPayload.3.json  controlComponentPublicKeysPayload.4.json  electionEventContextPayload.json  manifest.json  setupComponentPublicKeysPayload.json
datasets/direct-trust/: canton.cer  control_component_1.cer  control_component_2.cer  control_component_3.cer  control_component_4.cer  local_direct_trust_keystore_verifier.p12  local_direct_trust_pw_verifier.txt  printing_component.cer  public_keys_keystore_verifier.p12  public_keys_keystore_verifier_pw.txt  sdm_config.cer  sdm_tally.cer  voting_server.cer
datasets/tally/: eCH-0110_Post_E2E_DEV.xml  eCH-0110_v4-0_NE_20231124_TT05.xml  eCH-0222_Post_E2E_DEV.xml  eCH-0222_v1-0_NE_20231124_TT05.xml  eCH-0222_v3-0_NE_20231124_TT05.xml  evoting-decrypt_NE_20231124_TT05.xml  evoting-decrypt_Post_E2E_DEV.xml  manifest.json
datasets/xml/: test_1_schema_1.xml  test_1_schema_1_qualified.xml  test_1_schema_2.xml  test_1_schema_3.xml  test_2_schema_1.xml  test_2_schema_2.xml  test_3_schema_3.xml  test_4_schema_3.xml
ev_system_library/: Cargo.toml  README.md
ev_system_library/src/: lib.rs
ev_system_library/src/mix_offline/: mix_dec_offline.rs  mod.rs  voting_client_proofs.rs
gui/src/: App.vue  main.css
gui/src-tauri/: Cargo.toml
gui/src-tauri/src/: directory.rs  main.rs  verifications.rs
lib/: Cargo.toml
lib/src/: config.rs  constants.rs  lib.rs  runner.rs
lib/src/data_structures/: common_types.rs  mod.rs  setup_or_tally.rs
lib/src/data_structures/setup/: control_component_code_shares_payload.rs  control_component_public_keys_payload.rs  election_event_configuration.rs  election_event_context_payload.rs  encryption_parameters_payload.rs  mod.rs  setup_component_public_keys_payload.rs  setup_component_tally_data_payload.rs  setup_component_verification_data_payload.rs
lib/src/data_structures/tally/: control_component_ballot_box_payload.rs  control_component_shuffle_payload.rs  e_voting_decrypt.rs  ech_0110.rs  ech_0222.rs  mod.rs  tally_component_shuffle_payload.rs  tally_component_votes_payload.rs
lib/src/file_structure/: file.rs  file_group.rs  mod.rs  setup_directory.rs  tally_directory.rs
lib/src/verification/: meta_data.rs  mod.rs  result.rs  suite.rs  verification.rs  verifications.rs
lib/src/verification/setup/: mod.rs
lib/src/verification/setup/authenticity/: mod.rs
lib/src/verification/setup/completness/: mod.rs
lib/src/verification/setup/consistency/: mod.rs  v0301_encryption_group_consistency.rs  v0302_setup_file_names_consistency.rs  v0303_ccr_choice_return_codes_pk_consistency.rs  v0304_ccm_election_pk_consistency.rs  v0305_ccm_and_ccr_schnorr_proofs_consistency.rs  v0306_choice_return_codes_public_key_consistency.rs  v0307_election_pk_consistency.rs  v0308_primes_mapping_table_consistency.rs  v0309_election_event_id_consistency.rs  v0313_total_voters_consistency.rs  v0315_chunk_consistency.rs
lib/src/verification/setup/evidence/: mod.rs  v0501_0502_encryption_parameters_payload.rs  v0503_voting_options.rs  v0504_key_generation_schnorr_proofs.rs  v0521_encrypted_pcc_exponentiation_proofs.rs
lib/src/verification/setup/integrity/: mod.rs
lib/src/verification/tally/: mod.rs
lib/src/verification/tally/completness/: mod.rs
lib/src/verification/tally/consistency/: mod.rs
lib/src/verification/tally/evidence/: mod.rs
lib/src/verification/tally/integrity/: mod.rs
resources/: verification_list.json
resources/schemas/: bindings.xml  eCH-0110-4-0.xsd  eCH-0155-4-0.xsd  eCH-0222-1-0.xsd  evoting-config-4-4.xsd  evoting-config-6-0.xsd  evoting-decrypt-1-3.xsd
resources/test/: get-hash-election-event-context.json
runner/: Cargo.toml
runner/src/: checks.rs  lib.rs
src/: command.rs  config.rs  constants.rs  consts.rs  dataset.rs  direct_trust.rs  error.rs  error_utils.rs  lib.rs  main.rs  resources.rs  runner.rs  setup_or_tally.rs  startup_checks.rs
src/application_runner/: checks.rs  dataset.rs  extract.rs  mod.rs  report.rs  run_information.rs  runner.rs
src/crypto_primitives/: byte_array.rs  direct_trust.rs  elgamal.rs  hashing.rs  mod.rs  num_bigint.rs  number_theory.rs  openssl.rs  signature.rs  zero_knowledge_proof.rs
src/data_structures/: common_types.rs  dataset.rs  error.rs  mod.rs  serde.rs  setup.rs  setup_or_tally.rs  verifier_data.rs  xml.rs
src/file_structure/: context_directory.rs  directory.rs  file.rs  file_group.rs  mod.rs  setup_directory.rs  structure.rs  tally_directory.rs  zip.rs
src/verification/: README.md  error.rs  manual.rs  meta_data.rs  mod.rs  result.rs  suite.rs  verification.rs  verification_suite.rs  verifications.rs
test_data/direct-trust/: local_direct_trust_pw_verifier.txt
test_data/signing_keystore/: local_direct_trust_keystore_canton.p12  local_direct_trust_keystore_control_component_3.p12  local_direct_trust_pw_canton.txt  local_direct_trust_pw_control_component_1.txt  (+2 more)
xml_tests/: test_2_schema_3.xml  test_3_schema_1.xml  test_5_schema_3.xml
(+1004 files in other folders)
