[package]
name = "rust_ev_verifier_lib"
description = "Main library for the E-Voting system of Swiss Post."
authors = ["Denis Morel"]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/de-mo/rust_ev_verifier_lib"
version = "0.2.0"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]
exclude = ["/specs", "/datasets", "/data", "/log", "/test_temp_dir", "/temp"]

[dependencies]
rust_ev_crypto_primitives = "0.6"
#rust_ev_crypto_primitives = { path = "../rust_ev_crypto_primitives" }
rust_ev_system_library = "0.2"
#rust_ev_system_library = { path = "../rust_ev_system_library" }
thiserror = "2"
enum-kinds = "0.5"
tracing = "0.1"
chrono = "0.4"
data-encoding = "2"
lazy_static = "1"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"
glob = "0.3"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.11"
zip-extract = "0.2"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
paste = "1"
