[package]
name = "rust_ev_verifier_lib"
description = "Main library for the E-Voting system of Swiss Post."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
exclude = ["/specs", "/datasets", "/data", "/log", "/test_temp_dir", "/temp"]

[workspace]
members = ["crate_application_lib"]

[workspace.package]
authors = ["Denis Morel"]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/de-mo/rust_ev_verifier_lib"
version = "0.2.2"
license = "Apache-2.0"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]

[workspace.dependencies]
#rust_ev_system_library = "0.2.2"
rust_ev_system_library = { path = "../rust_ev_system_library" }
thiserror = "2"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
strum = { version = "0.26", features = ["derive"] }
chrono = "0.4"

[dependencies]
rust_ev_system_library.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
chrono.workspace = true
enum-kinds = "0.5"
data-encoding = "2"
lazy_static = "1"
roxmltree = "0.20"
glob = "0.3"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1.11"
zip-extract = "0.2"
dotenvy = "0.15"

[dev-dependencies]
paste = "1"

[features]
default = []
gmpmee = ["rust_ev_system_library/gmpmee"]
