[package]
name = "rust_ev_verifier_lib"
description = "Main library for the E-Voting system of Swiss Post."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true
exclude = ["/specs", "/datasets", "/data", "/log", "/test_temp_dir", "/temp"]

[workspace]
members = ["crate_application_lib"]

[workspace.package]
authors = ["Denis Morel"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/de-mo/rust_ev_verifier_lib"
version = "0.3.0"
license = "GPL-3.0+"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]

[workspace.dependencies]
rust_ev_system_library = "0.3"
#rust_ev_system_library = { path = "../rust_ev_system_library" }
thiserror = "2"
rayon = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
strum = { version = "0.27", features = ["derive"] }
chrono = "0.4"
typed-builder = "0.22"
derive-getters = "0.5"

[dependencies]
rust_ev_system_library.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
chrono.workspace = true
enum-kinds = "0.5"
data-encoding = "2"
lazy_static = "1"
roxmltree = "0.21"
glob = "0.3"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
zip = "5"
dotenvy = "0.15"

[dev-dependencies]
paste = "1"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

[features]
default = []
gmpmee = ["rust_ev_system_library/gmpmee"]
