[package]
name = "rust_verifier_console"
description = "Console application to verify the Swiss Post E-Voting."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_verifier_lib = {path = "../lib"}
rust_verifier_runner = {path = "../runner"}
structopt = "0.3"
log4rs = "1.2"
log.workspace = true
anyhow.workspace = true
lazy_static.workspace = true



