[package]
name = "crypto_primitives"
description = "Crypto Primitives necessary for the verifier."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
num-bigint-dig = { version="0.8", features= ["prime"] }
num-traits = "0.2"
num-bigint.workspace = true
chrono.workspace = true
thiserror.workspace = true
data-encoding.workspace = true