[package]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
name = "ev_system_library"
version = "0.1.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]
license = "LGPL-3.0+"

[dependencies]
rust_ev_crypto_primitives.workspace = true
thiserror.workspace = true
