[package]
name = "rust_verifier_lib"
description = "Library for an Implementation of a Verifier for the E-Voting system of Swiss Post."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
crypto_primitives = {path = "../crypto_primitives"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-kinds = "0.5"
roxmltree = "0.18"
glob = "0.3"
quick-xml = { version = "0.28", features = ["serialize"] }
log.workspace = true
data-encoding.workspace = true
num-bigint.workspace = true
chrono = {workspace = true, features = ["serde"]}
thiserror.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
rayon.workspace = true


