[package]
name = "rust_verifier_runner"
description = "Library for an Implementation of a Runner of verifications for Verifier for the E-Voting system of Swiss Post."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
rust_verifier_lib = {path = "../lib"}
crypto_primitives = {path = "../crypto_primitives"}
log.workspace = true
chrono = {workspace = true, features = ["serde"]}
thiserror.workspace = true
anyhow.workspace = true


